# IMS-project

./: CMakeLists.txt  Makefile  README.md  argument_parser.cpp  argument_parser.h  daily_process.cpp  daily_process.h  main.cpp  mean_intensity_of_sunlight_brno.cpp  mean_intensity_of_sunlight_brno.h  monthly_energy_flow.cpp  monthly_energy_flow.h  monthly_process.cpp  monthly_process.h  solar_energy_source.cpp  solar_energy_source.h  statistics.cpp  statistics.h  sunlight_brno.cpp  sunlight_brno.h  teoretical_incident_sunlight_brno.cpp  teoretical_incident_sunlight_brno.h  year_cycle.cpp  year_cycle.h
doc/: bib.bib  dokumentace.tex
